# ai-breakup-recovery-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  get_auth0_token.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
ai_breakup_recovery_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
ai_breakup_recovery_agent/skills/Breakup-Recovery/: skill.yaml
docs/: index.md  modules.md
tests/: test_main.py
